--- a/src/main/resources/templates/login/log-in.html
+++ b/src/main/resources/templates/login/log-in.html
@@ -47,7 +47,7 @@
                                 <input name="password" type="password" class="form-control"  required>
                             </div>
                             <div class="form-group">
-                                <button type="submit" name="submit" value="submit" class="form-control btn-outline-warning rounded submit px-3">Sign In</button>
+                                <button type="submit" value="submit" class="form-control btn-outline-warning rounded submit px-3">Sign In</button>
                             </div>
                             <div >
                                 <button id="my-signin2" class="btn btn" href="/users/googleauth" role="button" style="text-transform:none"></button>
